#WCS-3091 - iOS Swift SDK: add muteAudio, muteVideo usage to MediaDevicesSwift example

--- a/Swift/MediaDevices/Base.lproj/Main.storyboard
+++ b/Swift/MediaDevices/Base.lproj/Main.storyboard
@@ -67,6 +67,9 @@
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ybk-ik-rCd">
                                 <rect key="frame" x="324" y="299" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="muteAudio:" destination="SDJ-uw-PhH" eventType="valueChanged" id="5ac-ep-3oN"/>
+                                </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mute Audio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e72-7d-JVD">
                                 <rect key="frame" x="16" y="304" width="87" height="21"/>
@@ -117,6 +120,9 @@
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="RQj-CL-nfm">
                                 <rect key="frame" x="324" y="567" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="muteVideo:" destination="SDJ-uw-PhH" eventType="valueChanged" id="J0L-Uh-chy"/>
+                                </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mute Video" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jdn-wc-Y8o">
                                 <rect key="frame" x="16" y="572" width="87" height="21"/>
